--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,6 +397,26 @@
 }
 
 
+.about-main h1 {
+
+    text-align: center;
+    font-weight: 700;
+}
+
+.box {
+
+    margin-top: 50px;
+}
+
+.box-item {
+
+    
+    padding: 50px;
+    border:1px solid rgb(202, 202, 202);
+    border-radius: 10px;
+}
+
+
 
 
 
